--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,20 +5,20 @@
   grid-template-columns: 1fr;
   row-gap: 80px;
 }
-@media(max-width : 1024px) {
+@media(max-width: 1024px) {
   .places {
     margin: 92px 48px 0;
   }
 }
-@media(max-width : 768px) {
+@media(max-width: 768px) {
   .places {
     margin: 88px 24px 0;
     row-gap: 73px;
   }
 }
-@media(max-width : 320px) {
+@media(max-width: 320px) {
   .places {
-    margin: 64px 0 0;
+    margin-top: 64px;
     row-gap: 50px;
   }
 }
