--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,4 +3,24 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  margin-top: 92px;
+  margin-left: 148px;
+  max-width: 690px;
+}
+@media(max-width: 1024px) {
+  .intro {
+    margin-left: 48px;
+  }
+}
+@media(max-width: 768px) {
+  .intro {
+    margin-top: 88px;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+}
+@media(max-width: 320px) {
+  .intro {
+    margin: 64px 12px 0;
+  }
 }
