--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,4 +2,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 56px auto 0;
+  max-width: 984px;
+}
+@media(max-width: 1024px) {
+  .lead {
+    margin-top: 48px;
+    max-width: 928px;
+  }
+}
+@media(max-width: 768px) {
+  .lead {
+    max-width: 768px;
+  }
+}
+@media(max-width: 320px) {
+  .lead {
+    max-width: 320px;
+  }
 }
