--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,8 +1,13 @@
 .cover__link {
+  width: 100%;
   position: relative;
   height: 740px;
   text-decoration: none;
   display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-image: url('../../../images/cover-trains.jpg');
   background-size: 100% 100%;
   z-index: 1;
