--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,6 @@
 .cover__subtitle {
-  margin: 32px auto 0;
+  margin: 32px 0 0;
   max-width: 360px;
-  font-family: Inter;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -10,11 +9,10 @@
   text-align: center;
   color: #FFFFFF;
 }
-
 @media(max-width: 320px) {
   .cover__subtitle {
-    margin: 16px auto 0;
-    max-width: 360px;
+    margin: 16 0 0px;
+    max-width: 288px;
     line-height: 16px;
     font-size: 14px;
   }
