--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,16 @@
 .cover__title {
   margin: 0;
   max-width: 560px;
-  font-family: Inter;
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
   line-height: 76px;
-  letter-spacing: 0em;
   text-align: center;
   color: #FFFFFF;
 }
 @media(max-width: 320px) {
-  .cover__title {    
+  .cover__title {
+    max-width: 288px;  
     font-size: 32px;
     line-height: 35px;
   }
