--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,17 @@
 .footer {
   max-width: 1184px;
-  margin: 92px auto 24px;
-  padding: 0 48px 0;
+  padding: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
   }
 @media(max-width: 768px) {
   .footer {
-    margin: 88px auto 24px;
-    padding: 0 24px 0;
+    padding: 88px 24px 24px;
   }
 }
 @media(max-width: 320px) {
   .footer {
-    margin: 64px auto 24px 16px;
+    padding: 64px auto 24px 16px;
     flex-direction: column;
     align-items: flex-start;
   }
