--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,18 @@
 .header {
-  padding: 0 48px 0;
+  max-width: 1184px;
+  padding: 28px 48px 0;
   font-family: 'Inter', Arial, sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+@media(max-width: 768px) {
+  .header {
+    padding: 28px 24px 0;
+  }
+}
 @media(max-width: 320px) {
   .header {
-    padding: 0 16px 0;
+   padding:16px 16px 0;
   }
 }
