--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  font-family: Inter;
   font-style: normal;
-  font-weight: 400;
+  font-weight: bold;
   font-size: 12px;
   line-height: 18px;
   color: #FFFFFF;
