--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,24 +3,22 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 92px;
-  margin-left: 148px;
+  padding: 92px 442px 0 148px;
   max-width: 690px;
+  font-family: 'Inter', Arial, sans-serif;
 }
 @media(max-width: 1024px) {
   .intro {
-    margin-left: 48px;
+    padding: 92px 286px 0 48px;
   }
 }
 @media(max-width: 768px) {
   .intro {
-    margin-top: 88px;
-    margin-left: 24px;
-    margin-right: 24px;
+    padding: 88px 24px 0;
   }
 }
 @media(max-width: 320px) {
   .intro {
-    margin: 64px 12px 0;
+    padding: 64px 12px 0;
   }
 }
