--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,8 @@
 .lead__caption {
   align-self: start;
   margin: 8px 0 0;
-  font-family: Inter;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 0.15em;
