--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,23 +1,18 @@
 .lead {
+  max-width: 984px;
+  padding: 56px 148px 0;  
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 56px auto 0;
-  max-width: 984px;
+  align-items: center;  
+  font-family: 'Inter', Arial, sans-serif;
 }
 @media(max-width: 1024px) {
   .lead {
-    margin-top: 48px;
-    max-width: 928px;
+    padding: 48px 48px 0;
   }
 }
 @media(max-width: 768px) {
   .lead {
-    max-width: 768px;
-  }
-}
-@media(max-width: 320px) {
-  .lead {
-    max-width: 320px;
+    padding: 48px 0 0;
   }
 }
