--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,25 +2,24 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
-  margin: 92px auto 0;
+  padding: 92px 48px 0;
   max-width: 1184px;
 }
 @media(max-width: 1024px) {
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
-    margin: 92px 48px 0;
   }
 }
 @media(max-width: 768px) {
   .photo-grid {
     grid-template-columns: repeat(2, 1fr);
-    margin: 88px 24px 0;
+    padding: 88px 24px 0;
   }
 }
 @media(max-width: 320px) {
   .photo-grid {
     grid-template-columns: 1fr;
     gap: 12px;
-    margin: 64px 16px 0;
+    padding: 64px 16px 0;
   }
 }
