--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,24 @@
 .places {
   max-width: 984px;
-  margin: 92px auto 0;
+  padding: 92px 148px 0;
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 80px;
 }
 @media(max-width: 1024px) {
   .places {
-    margin: 92px 48px 0;
+    padding: 92px 48px 0;
   }
 }
 @media(max-width: 768px) {
   .places {
-    margin: 88px 24px 0;
+    padding: 88px 24px 0;
     row-gap: 73px;
   }
 }
 @media(max-width: 320px) {
   .places {
-    margin-top: 64px;
+    padding-top: 64px;
     row-gap: 50px;
   }
 }
