--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
   max-width: 1184px;
+  font-family: 'Inter', Arial, sans-serif;
   padding: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
