--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,15 +1,14 @@
 .cover__link {
   width: 100%;
   position: relative;
-  height: 740px;
+  min-height: 740px;
   text-decoration: none;
-  display: block;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-image: url('../../../images/cover-trains.jpg');
-  background-size: 100% 100%;
+  background-size: cover;
   z-index: 1;
 }
 .cover__link::after {
@@ -29,16 +28,16 @@
 }
 @media(max-width: 1024px) {
   .cover__link {
-    height: 640px; 
+    min-height: 640px; 
   }
 }
 @media(max-width: 768px) {
   .cover__link {
-    height: 480px; 
+    min-height: 480px; 
   }
 }
 @media(max-width: 320px) {
   .cover__link {
-    height: 200px; 
+    min-height: 200px; 
   }
 }
