--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,9 +9,9 @@
   text-align: center;
   color: #FFFFFF;
 }
-@media(max-width: 320px) {
+@media(max-width: 600px) {
   .cover__subtitle {
-    margin: 16 0 0px;
+    margin: 16px 0 0;
     max-width: 288px;
     line-height: 16px;
     font-size: 14px;
