--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -16,9 +16,11 @@
 .footer__link:hover {
   opacity: 0.8;  
 }
-@media(max-width: 320px) {
+@media(max-width: 575px) {
   .footer__link {
     margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 24px;
   }
   .footer__link:last-child {
     margin-bottom: 0;
