--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,9 +10,9 @@
     padding: 88px 24px 24px;
   }
 }
-@media(max-width: 320px) {
+@media(max-width: 575px) {
   .footer {
-    padding: 64px auto 24px 16px;
+    padding: 64px 16px 24px;
     flex-direction: column;
     align-items: flex-start;
   }
