--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,9 +5,16 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
+  transition: opacity 1s linear;
 }
-.header__lang-link:nth-child(2) {
-  margin-left: 18px;
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+.header__lang-link:nth-child(n) {
+  margin-right: 18px;
+}
+.header__lang-link:nth-last-child(1) {
+  margin-right: 0;
 }
 @media(max-width: 320px) {
   .header__lang-link {
