--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,3 +9,13 @@
   text-transform: uppercase;
   color: #FFFFFF;
 }
+@media(max-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media(max-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
