--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,8 @@
 .place__paragraph {
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 29px;
-  letter-spacing: 0em;
-  text-align: left;
+  line-height: 163%;
   color: #FFFFFF;
 }
