--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -9,6 +9,7 @@
   justify-content: center;
   background-image: url('../../../images/cover-trains.jpg');
   background-size: cover;
+  background-position: center;
   z-index: 1;
 }
 .cover__link::after {
