--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,16 @@
 .place__paragraph {
-  margin: 0;
-  font-size: 16px;
+  margin: 0 0 26px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 163%;
   color: #FFFFFF;
+}
+.place__paragraph:nth-last-child(1) {
+  margin-bottom: 0;
+}
+@media(max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
 }
